# -*- coding: utf-8 -*-

2008-12-01  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems/remote_fetcher.rb: made threadsafe.

2008-11-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Don't do any post-install
	stuff if no gems were installed.  Issue by Daniel Berger.

2008-11-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Read the file outside the exception
	block so we raise a sane error.
	* lib/rubygems/indexer.rb:  Allow the modern index to be updated
	incrementally.  Allow the legacy and modern indicies to be updated
	separately.

2008-11-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Added ability to only generate modern or
	legacy indicies.

2008-11-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/timer.rb:  Deprecate and move methods to Gem and
	Gem::StreamUI.

2008-11-11  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/, test/: Make Version understand prerelease
	versions using letters. (eg. '1.2.1.b') Thanks to Josh Susser and
	Alex Vollmer.

2008-11-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Gem name must be a String.

2008-10-31  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/defaults.rb:  Update to support 1.9 libdir.
	* util/gem_prelude.rb:  Move to .template, automatically fold in
	defaults.

2008-10-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Handle nonexistent home directory.  Bug #22229 by
	Alexey Verkhovsky.

2008-10-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb, lib/rubygems/custom_require.rb:  Make kernel
	methods private.  Patch #20801 by James M. Lawrence.  Expose
	our kernel extensions to RDoc.  Make Gem::location_of_caller behave on
	Windows.  Patch by Daniel Berger.
	* doc/release_notes/rel_1_3_1.rdoc:  Final release notes for 1.3.1.
	* lib/rubygems/rubygems_version.rb:  1.3.1.

2008-10-10  Eric Hodel  <drbrain@segment7.net>
